--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             box-sizing: border-box;
         }
 
+        html {
+            scroll-behavior: smooth;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             line-height: 1.6;
@@ -175,7 +179,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>DomHazza</h1>
         <p>Developer | Creator | Problem Solver</p>
     </header>
 
@@ -230,7 +234,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 DomHazza. All rights reserved.</p>
+        <p>&copy; 2025 DomHazza. All rights reserved.</p>
         <p class="mt-half">
             <a href="https://github.com/DomHazza" target="_blank" rel="noopener noreferrer">GitHub</a>
         </p>
